# curve_fitting

./: CMakeLists.txt  example.cpp
include/: curve_fitting.h
src/: curve_fitting.cpp
